--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "livekit-murf>=0.1.0",
     "livekit-plugins-noise-cancellation~=0.2",
     "python-dotenv",
+    "notion-client>=2.2.1",
 ]
 
 [dependency-groups]
